# polkadot-sdk-solochain-template

./: Cargo.toml
griffin-core/: Cargo.toml
griffin-core/src/: executive.rs  lib.rs  types.rs  utxo_set.rs
griffin-core/src/genesis/: block_builder.rs  config_builder.rs  mod.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
runtime/: Cargo.toml
runtime/src/: executive.rs  genesis.rs  lib.rs
tuxedo-core/: Cargo.toml
tuxedo-core/src/: executive.rs  lib.rs  types.rs  utxo_set.rs
utils/: Cargo.toml
utils/src/: lib.rs  storage.rs  types.rs
wallet/: Cargo.toml
wallet/src/: cli.rs  keystore.rs  main.rs  money.rs  rpc.rs  sync.rs
