[package]
description = "Test Griffin wallet based on Tuxedo"
edition = "2021"
license = "Apache-2.0"
name = "utxo-wallet"
repository = "https://github.com/txpipe/griffin"
version = "0.1.0"

[dependencies]
runtime = { package = "solochain-template-runtime", path = "../runtime" }
tuxedo-core = { path = "../tuxedo-core" }

clap = { features = [ "derive" ], workspace = true }
hex-literal = { workspace = true }
jsonrpsee = { features = [ "http-client" ], workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
serde_json = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }

anyhow = "1.0.69"
directories = "5.0.0"
env_logger = "0.11.0"
futures = "0.3"
hex = "0.4.3"
sled = "0.34.7"
tokio = "1.25.0"
sc-keystore = "32.0.0"
sp-keystore = "0.40.0"
